# cmb2sphere

./: .gitignore  README.md  cmb2sphere.py  flake.nix  justfile  planck2stl.py  pyproject.toml  requirements.txt  shell.nix
tests/: test_end2end.py
