[project]
name = "cmb2sphere"
version = "0.1.0"
description = "Converts Planck CMB temperature data into a 3D height profile on a sphere"
authors = [{name = "André-Patrick Bubel"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cosmology", "CMB", "visualization", "3D", "mesh"]
dependencies = [
    "healpy",
    "matplotlib",
    "numpy",
    "scipy",
    "numpy-stl",
    "docopt-ng",
]

[project.urls]
Repository = "https://github.com/Moredread/cmb2sphere"

[project.scripts]
cmb2sphere = "cmb2sphere:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.poetry.dependencies]
python = "^3.8"
healpy = "*"
matplotlib = "*"
numpy = "*"
scipy = "*"
numpy-stl = "*"
docopt-ng = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
